--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         <center> <img src="./Imagens/MarcoZero.PNG" alt="Imagem do Marco Zero"> </center>
         <p>
             A Praça Rio Branco, também conhecida como <strong>Marco Zero</strong>, é um espaço público localizado no bairro do Recife da cidade homônima, capital de Pernambuco.
-            O local fica próximo ao Porto do Recife e abriga o Marco Zero da cidade do Recife (instalado em 31 de janeiro de 1938, pelo Automóvel Clube de Pernambuco). É deste marco que são feitas todas as medidas oficiais de distâncias rodoviárias locais. Oficialmente denominada de Praça Barão do Rio Branco, fica localizada na Av. Alfredo Lisboa conectada às ruas Marquês de Olinda, Rio Branco e Barbosa Lima. 
+            O local fica próximo ao Porto do Recife e abriga o Marco Zero da cidade do Recife (instalado em 31 de janeiro de 1938, pelo Automóvel Clube de Pernambuco). É deste marco que são feitas todas as medidas oficiais de distâncias rodoviárias locais.. Oficialmente denominada de Praça Barão do Rio Branco, fica localizada na Av. Alfredo Lisboa conectada às ruas Marquês de Olinda, Rio Branco e Barbosa Lima. 
         </p>
 <br>
 <br>
